# refund-agent-bilal

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  ruff.toml
backend/app/: config.py  main.py
backend/app/agent/: execution.py  graph.py  models.py  nodes.py  state.py  tools.py
backend/app/api/: deps.py  errors.py  router.py  routes.py  schemas.py
backend/app/domain/: crm_repository.py  models.py  policy_engine.py
backend/app/infrastructure/: data_loader.py  database.py  mistral_client.py
backend/app/services/: chat_service.py  trace_service.py
backend/data/: orders.json  refund_policy.md
backend/data/schemas/: customers.schema.json  orders.schema.json
backend/scripts/: run_agent.py
backend/tests/: conftest.py  fakes.py  test_agent_graph.py  test_agent_integration.py  test_agent_tools.py  test_api.py  test_policy_engine.py  test_validate_node.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/policy/: page.tsx
frontend/components/layout/: AnalyticsHeader.tsx  AppHeader.tsx  AppNav.tsx  SplitView.tsx
frontend/components/ui/: DecisionTag.tsx  LoadingSpinner.tsx
frontend/features/admin/: AdminTracePanel.tsx  TraceEventRow.tsx  TraceTimeline.tsx
frontend/features/chat/: ChatInput.tsx  (+5 more)
frontend/hooks/: useChatSession.ts
frontend/lib/: api-client.ts  crmAnalytics.ts  scenarioDecisions.ts  sse.ts
frontend/types/: api.ts
(+2 files in other folders)
